--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "js-cookie": "^3.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "zustand": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.32",
