--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "axios": "^0.23.0",
     "firebase": "^8.9.0",
     "firebase-admin": "^10.0.0",
+    "framer-motion": "^4.1.17",
     "js-cookie": "^3.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
