--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-phone-input-2": "^2.14.0",
     "react-toastify": "^8.0.3",
     "zustand": "^3.6.0"
   },
