Added icon to head tag and manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "name": "Smallet",
     "icons": [
       {
-        "src": "favicon.ico",
+        "src": "logo.png",
         "sizes": "64x64 32x32 24x24 16x16",
         "type": "image/x-icon"
       },
@@ -11,6 +11,11 @@
         "src": "logo192.png",
         "type": "image/png",
         "sizes": "192x192"
+      },
+      {
+        "src": "logo256.png",
+        "type": "image/png",
+        "sizes": "256x256"
       },
       {
         "src": "logo512.png",
